# retail-demand-forecasting-system

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/sample/: sample.csv
docs/: API.md  ARCHITECTURE.md  MODELS.md
notebooks/: 02_feature_engineering.ipynb  03_model_training.ipynb  04_results_analysis.ipynb
scripts/: generate_data.py  run_pipeline.py
src/: __init__.py  arima_models.py  baselines.py  config.py  data_loader.py  data_validation.py  ensemble.py  evaluation.py  feature_engineering.py  forecasting.py  ml_models.py  mlflow_utils.py  preprocessing.py  prophet_model.py  var_model.py  visualization.py
tests/: conftest.py  test_data_loader.py  test_evaluation.py  test_features.py  test_models.py
